Refactor formatting and improve readability in StreamsInterviewQuestions.java